--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,36 +1,51 @@
 <div class="header">
   <ul class="nav nav-pills pull-right">
     <li class="active"><a ng-href="#">Home</a></li>
-    <li><a ng-href="#">About</a></li>
-    <li><a ng-href="#">Contact</a></li>
+    <li><a ng-href="https://github.com/m1ch3l" target="_blank">Github</a></li>
+    <li><a ng-href="http://radio.m1ch3l.biz/" target="_blank">Radio</a></li>
   </ul>
-  <h3 class="text-muted">m1ch3l github com</h3>
+  <h3 class="text-muted">m1ch3l.biz</h3>
 </div>
 
 <div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
+  <h1>m1ch3l</h1>
   <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
+    ...
   </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#">Splendid!</a></p>
 </div>
 
 <div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
-
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
-
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
+  <div class="col-md-6">
+    <h4>Radio</h4>
+    <p>
+      m1ch3l loves <a href="http://radio.m1ch3l.biz">Radio</a>
+    </p>
+  </div>
+  <div class="col-md-6">
+    <h4>Github</h4>
+    <p>
+      m1ch3l loves <a href="https://github.com/m1ch3l">Github</a>
+    </p>
+  </div>
+</div>
+<div class="row marketing">
+  <div class="col-md-6">
+    <h4>Irc</h4>
+    <p>
+      m1ch3l loves <a href="irc://irc.freenode.net:6667/##esl">Irc</a>
+    </p>
+  </div>
+  <div class="col-md-6">
+    <h4>Mail</h4>
+    <p>
+      m1ch3l loves <a href="mailto:m1ch3l@m1ch3l.biz">Email</a>
+    </p>
+  </div>
 </div>
 
-<div class="footer">
-  <p>♥ from the Yeoman team</p>
+<div>
+  <div class="footer"></div>
+  <div>
+    <h4>♥ from m1ch3l</h4>
+  </div>
 </div>
